--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/Main.js" type="module"></script>
 </head>
 <body>
-    <h1>Exm03</h1>
+    <h1>Jogo</h1>
     <canvas></canvas>
 </body>
 </html>
